Completly renewed the Collision system by replacing it with the Collider class - Added the collider to the player and adjusted some more settings