@@ -4,7 +4,6 @@ import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Scene;
 import javafx.scene.image.ImageView;
-import javafx.scene.layout.Pane;
 import javafx.scene.layout.StackPane;
 import javafx.stage.Stage;
 
@@ -13,14 +12,14 @@ import java.util.Objects;
 
 public class Main extends Application {
     public static Scene scene;
-
+//--enable-native-access=javafx.graphics
     @Override
     public void start(Stage stage) throws IOException {
         StackPane root = new StackPane();
-        Pane background = FXMLLoader.load(Objects.requireNonNull(Main.class.getResource("world-background.fxml")));
-        ImageView player  = FXMLLoader.load(Objects.requireNonNull(Main.class.getResource("player.fxml")));
-        root.getChildren().addAll(background, player);
-        scene = new Scene(root, 300, 300);
+        StackPane land = FXMLLoader.load(Main.class.getResource("view/Stack-background+land.fxml"));
+        ImageView player  = FXMLLoader.load(Main.class.getResource("player.fxml"));
+        root.getChildren().addAll(land, player);
+        scene = new Scene(root, 1920, 1072);
         stage.setTitle("ROOT");
         stage.setScene(scene);
         stage.show();
